# MusicHistoryOntology

./: .gitignore  .pre-commit-config.yaml  README.md  SPARQLqueries.txt  enriched_history_of_music_ontology.rdf  history_of_music_ontology.rdf  necessaryObjects.xlsx  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml  test.yml
models/: pydantic_models.py
music_history_ontology/: openopus_scraper.py  spotify_scraper.py
music_history_ontology/data_ingestion/musicbrainz/: conversion.py  musicbrainz.py
music_history_ontology/data_ingestion/wikipedia/: constants.py  functions.py  initial_queries.py  instance.py  llm.py  query_generation.py  time_interval_generator.py
music_history_ontology/ontology_enriching/: faiss.py  ontology_building.py  utils.py
music_history_ontology/rdf_reading/: class_property_mappings.py  functions.py  hierarchy_tree.py
rdf_components/: automatic_generated_queries.json  class_hierarchy_tree.json  class_property_mappings.json  trimmed_class_property_mappings.json
scripts/: convert_json_format.py  create_final_ontology.py  create_rdf_components.py  fetch_wikipedia_data.py  generate_json_files.py  test_st_classification.py
